# video_generator

./: .gitignore  MANIFEST.in  README.md  config.toml  pyproject.toml  reports.json  sample_data.json  setup.py  temp_data.json
examples/: use_external.py  use_modules.py
examples/new_project/: pyproject.toml
examples/new_project/src/: main.py
external_app/: main.py
projects/common/: __init__.py  config.py  utils.py
projects/project_a/: main.py  processor.py
projects/project_b/: __init__.py  analyzer.py  main.py
scripts/: generate_readme.py  setup_env.sh
