[tool.poetry]
name = "python-workspace"
version = "0.1.0"
description = "多项目工作区示例"
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "projects", from = "." },
    { include = "external_app", from = "." }
]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
pandas = "^2.0.0"
requests = "^2.31.0"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
project-a = "projects.project_a.processor:DataProcessor.process_data"
project-b = "projects.project_b.analyzer:DataAnalyzer.analyze_data"
external = "external_app.main:main"
  